# oauth-client-id-metadata-document-example

./: CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  openapi.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml
crates/integration-tests/: CLAUDE.md  Cargo.toml
crates/integration-tests/src/: lib.rs
crates/oauth-metadata/: CLAUDE.md  Cargo.toml
crates/oauth-metadata/src/: client_metadata.rs  jwks.rs  jwt.rs  key_manager.rs  lib.rs
crates/oauth-server/: CLAUDE.md  Cargo.toml
crates/oauth-server/src/: lib.rs  main.rs
crates/oauth-server/templates/: index.html
scripts/: release-test.sh
