[package]
name = "integration-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# Local crates
oauth-metadata.workspace = true
oauth-server = { path = "../oauth-server" }

# HTTP and server
axum.workspace = true
axum-test.workspace = true
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true

# Utilities
base64.workspace = true

# Testing
rstest.workspace = true