[package]
name = "oauth-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "oauth-server"
path = "src/main.rs"

[dependencies]
# Local crates
oauth-metadata.workspace = true

# HTTP and server
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
axum-test.workspace = true